--- a/Hotstar Clone/hotstarpg.html
+++ b/Hotstar Clone/hotstarpg.html
@@ -712,7 +712,7 @@
 
     <div class="last-footer">
         <div class="last-footer-texts">
-            <p>© 2024 HEMALA. All Rights Reserved.</p>
+            <p>© 2024 Hotstar Clone. All Rights Reserved.</p>
             <div class="last-footer-links">
                 <a href="#">Terms Of Use</a>
                 <a href="#">Privacy Policy</a>
